Working on Configuration File

--- a/Todo/Todo.iOS/Todo.iOS.csproj
+++ b/Todo/Todo.iOS/Todo.iOS.csproj
@@ -27,6 +27,7 @@
     <AssemblyName>TodoiOS</AssemblyName>
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
+    <CodesignProvision />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>full</DebugType>
@@ -72,7 +73,8 @@
     <AssemblyName>QuickTodoiOS</AssemblyName>
     <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
-    <MtouchEnableSGenConc></MtouchEnableSGenConc>
+    <MtouchEnableSGenConc>
+    </MtouchEnableSGenConc>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
     <DebugType>full</DebugType>
@@ -105,6 +107,9 @@
     <AssemblyName>QuickTodoiOS</AssemblyName>
     <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <AppExtensionDebugBundleId />
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl">
