--- a/Todo/Todo.MobileUITest/app.config
+++ b/Todo/Todo.MobileUITest/app.config
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
+        <appSettings>
     <!--Specify the Platform to use. Valid values: "Android", "IOS" -->
-    <add key="platform" value="Android"/>
+    <add key="platform" value="IOS" />
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
+</configuration>
