Run tests on Android

--- a/Todo/Todo.Mobile.UITest/App.config
+++ b/Todo/Todo.Mobile.UITest/App.config
@@ -2,6 +2,6 @@
 <configuration>
    <appSettings>
     <!--Specify the Platform to use. Valid values: "Android", "IOS" -->
-    <add key="platform" value="IOS" />
+    <add key="platform" value="Android" />
   </appSettings>
 </configuration>
